--- a/.github/workflows/pytorch_transformers.yml
+++ b/.github/workflows/pytorch_transformers.yml
@@ -1,4 +1,4 @@
-name: TexturePacker
+name: PytorchTransformersNotebook
 
 on:
   push:
@@ -11,12 +11,9 @@ jobs:
   build:
     runs-on: ubuntu-20.04
     timeout-minutes: 5
-    strategy:
-      matrix:
-        version: [ 5.5.0, 5.4.0 ]
     defaults:
       run:
-        working-directory: docker/texturepacker/
+        working-directory: docker/pytorch_transformers/
 
     steps:
       - uses: snow-actions/sparse-checkout@v1.1.0
