--- a/.github/workflows/pytorch_transformers.yml
+++ b/.github/workflows/pytorch_transformers.yml
@@ -13,7 +13,7 @@ jobs:
     timeout-minutes: 5
     defaults:
       run:
-        working-directory: docker/pytorch_transformers/
+        working-directory: pytorch_transformers/
 
     steps:
       - uses: snow-actions/sparse-checkout@v1.1.0
