--- a/pytorch_transformers/Dockerfile
+++ b/pytorch_transformers/Dockerfile
@@ -1,4 +1,4 @@
 FROM public.ecr.aws/j1r0q0g6/notebooks/notebook-servers/jupyter-pytorch-cuda:v1.4
-RUN pip install transformers
+RUN pip install transformers nltk
 USER jovyan
 CMD ["sh","-c", "jupyter notebook --notebook-dir=/home/jovyan --ip=0.0.0.0 --no-browser --allow-root --port=8888 --NotebookApp.token='' --NotebookApp.password='' --NotebookApp.allow_origin='*' --NotebookApp.base_url=${NB_PREFIX}"]
